HVAC Backup 2/objects/Checklist__c.object
<CustomObject>
    <fields>
        <fullName>CBO_Verified_Date__c</fullName>
        <label>CBO Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CBO_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBO Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFs_Verified_Date__c</fullName>
        <label>CFs Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CFs_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CFs Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Contract__c</columns>
        <columns>CBO_Verified__c</columns>
        <columns>CFs_Verified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>